--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ build-backend = "flit_core.buildapi"
 [project]
 # Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
 name = "ansys-mechanical-stubs"
-version = "0.1.dev0"
-description = "PyMechanical scripting API stubs."
+version = "2024.1.dev0"
+description = "Mechanical scripting API stubs for PyMechanical."
 readme = "README.rst"
 requires-python = ">=3.10,<4"
 license = {file = "LICENSE"}
