--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,7 +1,25 @@
 name: GitHub CI
 on:
   pull_request:
-  workflow_dispatch:
+  workflow_dispatch: # or workflow_call
+    inputs:
+      mechanical-version:
+        description: "Create stubs for the following Mechanical version:"
+        type: choice
+        options:
+          - '251'
+          - '242'
+          - '241'
+        default: "242"
+      python-version:
+        description: "Create stubs using the following python version:"
+        type: choice
+        options:
+          - '3.10'
+          - '3.11'
+          - '3.12'
+          - 'All of the above'
+        default: "All of the above"
   push:
     tags:
       - "*"
@@ -10,6 +28,7 @@ on:
 
 env:
   MAIN_PYTHON_VERSION: '3.10'
+  DEFAULT_MECHANICAL_VERSION: '242'
   PACKAGE_NAME: ansys-mechanical-stubs
   PACKAGE_NAMESPACE: ansys.mechanical.stubs
   PACKAGE_PATH: src/ansys/mechanical/stubs
@@ -62,21 +81,69 @@ jobs:
           vale-config: doc/.vale.ini
           token: ${{ secrets.GITHUB_TOKEN }}
 
+  set-mechanical-versions:
+    name: Set Mechanical image and version variables
+    runs-on: ubuntu-latest
+    outputs:
+      # '24.2.0'
+      image: ${{ steps.save-versions.outputs.image }}
+      # '242'
+      version: ${{ steps.save-versions.outputs.version }}
+      # ['3.10', '3.11', '3.12']
+      python-version: ${{ steps.save-versions.outputs.python_version }}
+    steps:
+      - id: save-versions
+        run: |
+          if [[ -z "${{ inputs.mechanical-version }}" ]]; then
+            export mech_version=""
+            export mech_image_version=""
+          else
+            export mech_version=${{ inputs.mechanical-version }}
+            # Create the image version from the Mechanical version (242 -> 24.2.0)
+            export mech_image_version=${mech_version:0:2}.${mech_version:2}.0
+          fi
+
+          if [[ -z "${{ inputs.python-version }}" ]]; then
+            if [[ ("${{ inputs.python-version }}" == "All of the above") ]]; then
+              python_version="['3.10', '3.11', '3.12']"
+            else
+              python_version="['${{ inputs.python-version }}']"
+            fi
+          else
+            python_version="['3.10', '3.11', '3.12']"
+          fi
+
+          # Set the variables
+          echo "image=$mech_image_version" >> $GITHUB_OUTPUT
+          echo "version=$mech_version" >> $GITHUB_OUTPUT
+          echo "python_version=$python_version" >> $GITHUB_OUTPUT
+
+  config-matrix:
+    runs-on: ubuntu-latest
+    needs: [set-mechanical-versions]
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - id: set-matrix
+        run: |
+          # Run all stable mechanical versions release tags
+          # For nightly scheduled runs use pre-release (25.1_candidate)
+          # For pull requests and merges use latest stable version (242)
+          if ${{ github.event_name == 'workflow_dispatch' }}; then
+            echo "matrix={\"os\":[public-ubuntu-latest-8-cores],\"mechanical\":[{ \"image\": '${{ needs.set-mechanical-versions.outputs.image }}', \"version\": '${{ needs.set-mechanical-versions.outputs.version }}' }], \"python-version\": ${{ needs.set-mechanical-versions.outputs.python-version }}}"
+          else
+            echo "matrix={\"os\":[public-ubuntu-latest-8-cores],\"mechanical\":[{ \"image\": '24.1.0', \"version\": '241' }, { \"image\": '24.2.0', \"version\": '242' }], \"python-version\": ${{ needs.set-mechanical-versions.outputs.python-version }}}"
+          fi
+
   gen-stubs:
     name: Generate Mechanical stubs
-    needs: [style, doc-style]
+    needs: [style, doc-style, config-matrix]
     runs-on: ${{ matrix.os }}
     container:
       image: ghcr.io/ansys/mechanical:${{ matrix.mechanical.image }}
       options: --entrypoint /bin/bash
     strategy:
-      matrix:
-        os: [public-ubuntu-latest-8-cores]
-        mechanical: [
-          { image: '24.1.0', version: '241' },
-          { image: '24.2.0', version: '242' },
-        ]
-        python-version: ['3.10', '3.11', '3.12']
+      matrix: ${{ fromJSON(needs.config-matrix.outputs.matrix) }}
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -140,7 +207,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ${{ needs.set-mechanical-versions.outputs.python-version }}
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
