--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -107,8 +107,8 @@ jobs:
           echo "image=$mech_image_version" >> $GITHUB_OUTPUT
           echo "version=$mech_version" >> $GITHUB_OUTPUT
 
-          if [[ -z "${{ inputs.python-version }}" ]]; then
-            if [[ ("${{ inputs.python-version }}" == "All of the above") ]]; then
+          if [[ -n "${{ inputs.python-version }}" ]]; then
+            if [[ "${{ inputs.python-version }}" == "All of the above" ]]; then
               python_version="['3.10', '3.11', '3.12']"
             else
               python_version="['${{ inputs.python-version }}']"
