--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -208,7 +208,7 @@ jobs:
   smoke-tests:
     name: Build wheelhouse
     runs-on: ${{ matrix.os }}
-    needs: [gen-stubs]
+    needs: [gen-stubs, set-mechanical-versions]
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
