--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -123,7 +123,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [set-mechanical-versions]
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
+      stubs-matrix: ${{ steps.set-matrix.outputs.stubs_matrix }}
+      test-matrix: ${{ steps.set-matrix.outputs.test_matrix }}
     steps:
       - id: set-matrix
         run: |
@@ -131,14 +132,16 @@ jobs:
           # For nightly scheduled runs use pre-release (25.1_candidate)
           # For pull requests and merges use latest stable version (242)
           if ${{ github.event_name == 'workflow_dispatch' }}; then
-            echo "matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
+            echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
             echo "{\"mechanical\":[{\"image\":\"${{ needs.set-mechanical-versions.outputs.image }}\",\"version\":\"${{ needs.set-mechanical-versions.outputs.version }}\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
           else
-            echo "matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
+            echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
             echo "{\"mechanical\":[{\"image\":\"24.1.0\",\"version\":\"241\"},{\"image\":\"24.2.0\",\"version\":\"242\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
           fi
+
+          echo "test_matrix={\"os\":[ubuntu-latest, windows-latest],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> $GITHUB_OUTPUT
 
   gen-stubs:
     name: Generate Mechanical stubs
@@ -148,7 +151,7 @@ jobs:
       image: ghcr.io/ansys/mechanical:${{ matrix.mechanical.image }}
       options: --entrypoint /bin/bash
     strategy:
-      matrix: ${{ fromJSON(needs.config-matrix.outputs.matrix) }}
+      matrix: ${{ fromJSON(needs.config-matrix.outputs.stubs-matrix) }}
     steps:
       - name: "Install Git and clone project"
         uses: actions/checkout@v4
@@ -208,11 +211,9 @@ jobs:
   smoke-tests:
     name: Build wheelhouse
     runs-on: ${{ matrix.os }}
-    needs: [gen-stubs, set-mechanical-versions]
+    needs: [gen-stubs, config-matrix]
     strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
-        python-version: ${{ needs.set-mechanical-versions.outputs.python-version }}
+      matrix: ${{ fromJSON(needs.config-matrix.outputs.test-matrix) }}
     steps:
     - name: "Install Git and clone project"
       uses: actions/checkout@v4
