make 251 default and add 251 to matrix

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -10,7 +10,7 @@ on:
           - '251'
           - '242'
           - '241'
-        default: "242"
+        default: '251'
       python-version:
         description: "Create stubs using the following python version:"
         type: choice
@@ -27,8 +27,8 @@ on:
       - main
 
 env:
-  MAIN_PYTHON_VERSION: '3.10'
-  DEFAULT_MECHANICAL_VERSION: '242'
+  MAIN_PYTHON_VERSION: '3.12'
+  DEFAULT_MECHANICAL_VERSION: '251'
   PACKAGE_NAME: ansys-mechanical-stubs
   PACKAGE_NAMESPACE: ansys.mechanical.stubs
   PACKAGE_PATH: src/ansys/mechanical/stubs
@@ -85,9 +85,9 @@ jobs:
     name: Set Mechanical image and version variables
     runs-on: ubuntu-latest
     outputs:
-      # '24.2.0'
+      # '25.1.0'
       image: ${{ steps.save-versions.outputs.image }}
-      # '242'
+      # '251'
       version: ${{ steps.save-versions.outputs.version }}
       # ['3.10', '3.11', '3.12']
       python-version: ${{ steps.save-versions.outputs.python_version }}
@@ -99,7 +99,7 @@ jobs:
             export mech_image_version=""
           else
             export mech_version=${{ inputs.mechanical-version }}
-            # Create the image version from the Mechanical version (242 -> 24.2.0)
+            # Create the image version from the Mechanical version (251 -> 25.1.0)
             export mech_image_version=${mech_version:0:2}.${mech_version:2}.0
           fi
 
@@ -129,15 +129,14 @@ jobs:
       - id: set-matrix
         run: |
           # Run all stable mechanical versions release tags
-          # For nightly scheduled runs use pre-release (25.1_candidate)
-          # For pull requests and merges use latest stable version (242)
+          # For pull requests and merges use latest stable version (251)
           if ${{ github.event_name == 'workflow_dispatch' }}; then
             echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
             echo "{\"mechanical\":[{\"image\":\"${{ needs.set-mechanical-versions.outputs.image }}\",\"version\":\"${{ needs.set-mechanical-versions.outputs.version }}\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
           else
             echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
-            echo "{\"mechanical\":[{\"image\":\"24.1.0\",\"version\":\"241\"},{\"image\":\"24.2.0\",\"version\":\"242\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
+            echo "{\"mechanical\":[{\"image\":\"24.1.0\",\"version\":\"241\"},{\"image\":\"24.2.0\",\"version\":\"242\"},{\"image\":\"25.1.0\",\"version\":\"251\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
           fi
 
