--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -20,6 +20,17 @@ on:
           - '3.12'
           - 'All of the above'
         default: 'All of the above'
+      assemblies:
+        description: "Create stubs for the following assemblies:"
+        type: choice
+        options:
+          - 'Ansys.Mechanical.DataModel'
+          - 'Ansys.Mechanical.Interfaces'
+          - 'Ansys.ACT.Interfaces'
+          - 'Ansys.ACT.WB1'
+          - 'Ans.Core'
+          - 'All of the above'
+        default: 'All of the above'
   push:
     tags:
       - "*"
@@ -120,6 +131,32 @@ jobs:
           echo "python_version=$python_version" >> $GITHUB_OUTPUT
           echo "doc_python_version=$doc_python_version" >> $GITHUB_OUTPUT
 
+  set-assemblies:
+    name: Set assemblies to generate stubs for
+    runs-on: ubuntu-latest
+    outputs:
+      assemblies: ${{ steps.set-assemblies.outputs.assemblies }}
+    steps:
+      - id: set-assemblies
+        run: |
+          if [[ -z "${{ inputs.assemblies }}" ]] || [[ "${{ inputs.assemblies }}" == "All of the above" ]]; then
+            assemblies="--all-assemblies"
+          else
+            if [[ "${{ inputs.assemblies }}" == "Ansys.Mechanical.DataModel" ]]; then
+              assemblies="--mechanical-datamodel"
+            elif [[ "${{ inputs.assemblies }}" == "Ansys.Mechanical.Interfaces" ]]; then
+              assemblies="--mechanical-interfaces"
+            elif [[ "${{ inputs.assemblies }}" == "Ansys.ACT.Interfaces" ]]; then
+              assemblies="--act-interfaces"
+            elif [[ "${{ inputs.assemblies }}" == "Ansys.ACT.WB1" ]]; then
+              assemblies="--act-wb1"
+            elif [[ "${{ inputs.assemblies }}" == "Ans.Core" ]]; then
+              assemblies="--ans-core"
+            fi
+          fi
+
+          echo "assemblies=$assemblies" >> $GITHUB_OUTPUT
+
   config-matrix:
     runs-on: ubuntu-latest
     needs: [set-mechanical-versions]
@@ -145,7 +182,7 @@ jobs:
 
   gen-stubs:
     name: Generate Mechanical stubs
-    needs: [style, doc-style, config-matrix]
+    needs: [style, doc-style, config-matrix, set-assemblies]
     runs-on: public-ubuntu-latest-8-cores
     container:
       image: ghcr.io/ansys/mechanical:${{ matrix.mechanical.image }}
@@ -184,7 +221,7 @@ jobs:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
-          python src/ansys/mechanical/stubs/stub_generator/create_files.py --make --version ${{ matrix.mechanical.version }} --all-assemblies > results.txt
+          python src/ansys/mechanical/stubs/stub_generator/create_files.py --make --version ${{ matrix.mechanical.version }} ${{ needs.set-assemblies.outputs.assemblies }} > results.txt
         continue-on-error: True
 
       - name: "Check stubs were generated"
