--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,8 @@ dependencies = []
 
 [project.optional-dependencies]
 build = [
-    "ansys-pythonnet==3.1.0rc3"
+    "ansys-pythonnet==3.1.0rc3",
+    "click==8.1.8",
 ]
 doc = [
     "ansys-sphinx-theme[autoapi]==1.3.1",
