--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,17 +28,17 @@ dependencies = []
 
 [project.optional-dependencies]
 build = [
-    "ansys-pythonnet==3.1.0rc3"
+    "ansys-pythonnet==3.1.0rc6"
 ]
 doc = [
-    "ansys-sphinx-theme[autoapi]==1.5.2",
+    "ansys-sphinx-theme[autoapi]==1.5.3",
     "Sphinx==8.2.3",
     "sphinx-copybutton==0.5.2",
     "sphinx-notfound-page==1.1.0",
     "sphinx-jinja==2.0.2",
     "autodoc_pydantic==2.2.0",
-    "jupyter_sphinx==0.5.3",
-    "numpydoc==1.8.0",
+    "jupyter-sphinx==0.5.3",
+    "numpydoc==1.9.0",
     "sphinx-autodoc-typehints==3.2.0",
     "sphinxcontrib-globalsubs==0.1.2",
     "sphinxcontrib-httpdomain==1.8.1",
@@ -47,7 +47,7 @@ doc = [
     "sphinxnotes-strike==1.2.1",
 ]
 tests = [
-    "pytest==8.3.5",
+    "pytest==8.4.1",
     "pytest-cov==6.2.1",
 ]
 
