--- a/.github/workflows/setup-stubs/action.yml
+++ b/.github/workflows/setup-stubs/action.yml
@@ -80,7 +80,9 @@ runs:
                     f.write(f"from .{folder} import *\n")
                     f.write('"""Mechanical installation version."""\n')
 
-        with open("${{ inputs.package-path }}/__init__.py", "r") as f:
-            content = f.readlines()
-            for line in content:
-                print(line.strip())
+    - name: "Upload __init__.py files"
+      uses: actions/upload-artifact@v4
+      with:
+        name: __init__.py
+        path: ${{ inputs.package-path }}/__init__.py
+        retention-days: 7
