--- a/.github/workflows/setup-stubs/action.yml
+++ b/.github/workflows/setup-stubs/action.yml
@@ -83,6 +83,6 @@ runs:
     - name: "Upload __init__.py files"
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ inputs.package-path }}/__init__.py
+        name: ${{ inputs.folder-pattern }}-init-file
         path: ${{ inputs.package-path }}/__init__.py
         retention-days: 7
