--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -139,13 +139,17 @@ jobs:
             echo "{\"mechanical\":[{\"image\":\"${{ needs.set-mechanical-versions.outputs.image }}\",\"version\":\"${{ needs.set-mechanical-versions.outputs.version }}\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
 
-            echo "doc_build_matrix={\"python-version\":[\'${{ inputs.python-version }}\']}" >> $GITHUB_OUTPUT
+            echo "doc_build_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
+            echo "{\"mechanical-version\":\"${{ needs.set-mechanical-versions.outputs.version }}\",\"python-version\":[\'${{ inputs.python-version }}\']}" >> ${GITHUB_OUTPUT}
+            echo "DELIMITER" >> ${GITHUB_OUTPUT}
           else
             echo "stubs_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
-            echo "{\"mechanical\":[{\"image\":\"24.2.0\",\"version\":\"242\"},{\"image\":\"25.1.0\",\"version\":\"251\"},{\"image\":\"25.2.0\",\"version\":\"252\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
+            echo "{\"mechanical\":[{\"image\":\"24.1.0\",\"version\":\"241\"},{\"image\":\"24.2.0\",\"version\":\"242\"},{\"image\":\"25.1.0\",\"version\":\"251\"},{\"image\":\"25.2.0\",\"version\":\"252\"}],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> ${GITHUB_OUTPUT}
             echo "DELIMITER" >> ${GITHUB_OUTPUT}
 
-            echo "doc_build_matrix={\"python-version\":['${{ env.MAIN_PYTHON_VERSION }}']}" >> $GITHUB_OUTPUT
+            echo "doc_build_matrix<<DELIMITER" >> ${GITHUB_OUTPUT}
+            echo "{\"mechanical-version\":[\"241\",\"242\",\"251\",\"252\"],\"python-version\":[\'${{ env.MAIN_PYTHON_VERSION }}\']}" >> ${GITHUB_OUTPUT}
+            echo "DELIMITER" >> ${GITHUB_OUTPUT}
           fi
 
           echo "test_matrix={\"os\":['ubuntu-latest', 'windows-latest'],\"python-version\":${{ needs.set-mechanical-versions.outputs.python-version }}}" >> $GITHUB_OUTPUT
@@ -301,7 +305,7 @@ jobs:
     - name: "Download stubs"
       uses: ./.github/workflows/setup-stubs/
       with:
-        folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
+        folder-pattern: "v${{ matrix.mechanical-version }}-${{ matrix.python-version }}"
         package-path: "${{ env.PACKAGE_PATH }}"
         python-version: ${{ matrix.python-version }}
 
@@ -387,7 +391,7 @@ jobs:
         github.event_name == 'workflow_dispatch' ||
         matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
-        name: documentation-md
+        name: documentation-md-v${{ matrix.mechanical-version }}
         path: doc/_build/markdown
         retention-days: 7
 
@@ -397,7 +401,7 @@ jobs:
         github.event_name == 'workflow_dispatch' ||
         matrix.python-version == env.MAIN_PYTHON_VERSION
       with:
-        name: documentation-html
+        name: documentation-html-v${{ matrix.mechanical-version }}
         path: doc/_build/html
         retention-days: 7
 
@@ -407,23 +411,23 @@ jobs:
         matrix.python-version == env.MAIN_PYTHON_VERSION
       uses: actions/upload-artifact@v4
       with:
-        name: documentation-pdf
+        name: documentation-pdf-v${{ matrix.mechanical-version }}
         path: doc/_build/latex/doc.pdf
         retention-days: 7
 
-  doc-deploy-pr:
-    name: "Deploy PR documentation"
-    runs-on: ubuntu-latest
-    needs: [doc-build]
-    if: always() && (needs.doc-build.result == 'success' || needs.doc-build.result == 'skipped')
-    steps:
-      - uses: ansys/actions/doc-deploy-pr@v10
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
-          maximum-pr-doc-deployments: 10
+  # doc-deploy-pr:
+  #   name: "Deploy PR documentation"
+  #   runs-on: ubuntu-latest
+  #   needs: [doc-build]
+  #   if: always() && (needs.doc-build.result == 'success' || needs.doc-build.result == 'skipped')
+  #   steps:
+  #     - uses: ansys/actions/doc-deploy-pr@v10
+  #       with:
+  #         cname: ${{ env.DOCUMENTATION_CNAME }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+  #         bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+  #         maximum-pr-doc-deployments: 10
 
   build-library:
     name: Build library
